--- a/css-styles/cooking-tips.css
+++ b/css-styles/cooking-tips.css
@@ -1,43 +1,53 @@
-.Page-heading{
-    font-style: italic;
-    text-align: center;
-}
 
 .Welcome-message{
+    font-family: serif;
     text-align: center;
     justify-content: center;
-    font-weight: bold;
-    font-size: medium;
+    font-size: large;
+    font-weight: 400;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
     margin-bottom: 100px;
 }
-.ct-heading{
-    font-size: large;
-    font-weight: 800;
-}
+
 .CT-IMGs{
-    width: 800px;
-    height: 600px;
+    width: 600px;
+    height: 500px;
     object-fit: fill;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 150px;
     width: 50%;
 }
+.ct-heading{
+    margin-left: 25px;
+    font-size: x-large;
+    font-weight: 800;
+    font-style: oblique;
+}
 .tips{
-    padding-bottom: 20px;
-    padding-top: 100px;
+    background-color:rgb(254, 254, 254) ;
+    border-color: black;
+    border-style: solid;
+    font-size: large;
+    margin-left: 25px;
+    padding-bottom: 10px;
+    padding-top: 20px;
+    
 }
 .li{
     margin-top: 2.6;
-    font-style: italic;
-   padding-bottom: 20px; 
+    padding-bottom: 20px; 
 }
-.page-info{
-    padding-left: 25px;
-    padding-top: 20px;
+.more-tips{
+    font-size: medium;
+    font-style: italic;
+    margin-top: 100px;
+    margin-left: 25px;
+    text-decoration: none;
+    color:rgb(203, 65, 6)
     
 }
