--- a/css-styles/homepage.css
+++ b/css-styles/homepage.css
@@ -1,8 +1,7 @@
 .Page-heading{
     font-style: italic;
-    text-align: center;
+    text-align: center;  
 }
-
 .welcomeM-box{
     display: flex;
     display:block;
@@ -10,8 +9,7 @@
 }
 .Welcome-message{
     text-align: center;
-    font-weight: bold;
-    font-size: medium;
+    font-size: large;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -21,7 +19,7 @@
 }
 .Popular-seafood{
     font-weight: bold;
-    font-size: large;
+    font-size:x-large;
     font-style: italic;
     margin-left: 25px;
     margin-bottom: 50px;
@@ -50,17 +48,15 @@
 .HP-Imagetext{
     font-weight: bold;
     font-style: italic;
-    font-size: medium;
+    font-size: large;
     display: block;
     margin-left: auto;
     margin-right: auto;
     
 }
 .start-message{
-    font-weight: bold;
-    font-size: medium;
+    font-size: large;
     width: 70%;
     margin-left: 25px;
     margin-bottom: 100px;
-
 }
