--- a/css-styles/recipepage.css
+++ b/css-styles/recipepage.css
@@ -15,29 +15,32 @@
     width: 50%;
     height: 25%;
     float: right;
+    font-size: large;
     margin-bottom: 50px;
+    
 }
 
 .RecipeTitle {
     font-weight: bolder;
     font-style: italic;
-    font-size: large;
+    font-size: x-large;
     width: 400px;
     
 }
 
 .Ingredients {
     font-weight: bold;
-    font-size: medium;
+    font-size: large;
     width: 400px;
 }
 
 .Directions {
     font-weight: bold;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size: medium;
+    font-size: large;
     display: inline-block;
     width: 50%;
+    
 }
 
 .seafoodIMG {
